--- a/CRMPhone/Controls/NotifyRequestControl.xaml
+++ b/CRMPhone/Controls/NotifyRequestControl.xaml
@@ -1,4 +1,4 @@
-﻿<UserControl x:Class="CRMPhone.Controls.RequestControl"
+﻿<UserControl x:Class="CRMPhone.Controls.NotifyRequestControl"
              xmlns="http://schemas.microsoft.com/winfx/2006/xaml/presentation"
              xmlns:x="http://schemas.microsoft.com/winfx/2006/xaml"
              xmlns:mc="http://schemas.openxmlformats.org/markup-compatibility/2006" 
@@ -7,7 +7,7 @@
              xmlns:dto="clr-namespace:RequestServiceImpl.Dto;assembly=RequestServiceImpl"
              mc:Ignorable="d" 
              d:DesignHeight="300" d:DesignWidth="900"
-             d:DataContext="{d:DesignInstance viewModel:RequestControlContext}">
+             d:DataContext="{d:DesignInstance viewModel:AlertRequestControlModel}">
     <UserControl.Resources>
         <BooleanToVisibilityConverter x:Key="BooleanToVisibility" />
     </UserControl.Resources>
@@ -19,80 +19,8 @@
         <Grid.ColumnDefinitions>
             <ColumnDefinition Width="*"/>
         </Grid.ColumnDefinitions>
-        <WrapPanel Grid.Row="0" HorizontalAlignment="Center">
-            <Button Width="120" Margin="5,5,20,5" Content="Новая заявка" Command="{Binding AddRequestCommand}"/>
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="№ заявки:"/>
-            <TextBox Margin="3" Width="60" Text="{Binding RequestNum}"  VerticalAlignment="Center"/>
-            <WrapPanel HorizontalAlignment="Center">
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="улица:"/>
-            <ComboBox Margin="3" Width ="150" TabIndex ="2" DisplayMemberPath="NameWithPrefix" SelectedItem="{Binding SelectedStreet}" ItemsSource="{Binding StreetList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="дом:"/>
-            <ComboBox Margin="3" Width="65" TabIndex ="3" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedHouse}" ItemsSource="{Binding HouseList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
-            <ComboBox Margin="3" Width="100" TabIndex ="5" DisplayMemberPath="Name" SelectedItem="{Binding SelectedFlat}" ItemsSource="{Binding FlatList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
-            </WrapPanel>
-            <Expander Header="Доп. фильтры">
-                <WrapPanel>
-                    <WrapPanel >
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="услуга:"/>
-                        <ComboBox Margin="3" Width="125" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedParentService}" ItemsSource="{Binding ParentServiceList}" IsEditable="True" />
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="причина:"/>
-                        <ComboBox Margin="3" Width="240" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedService}" ItemsSource="{Binding ServiceList}" IsEditable="True" />
-                    </WrapPanel>
-                    <TextBlock Margin="3" VerticalAlignment="Center" Text="статус:"/>
-                    <ComboBox Margin="3" Width="80" VerticalAlignment="Center" DisplayMemberPath="Description" SelectedItem="{Binding SelectedStatus}" ItemsSource="{Binding StatusList}" IsEditable="True" />
-
-                    <TextBlock Margin="3" VerticalAlignment="Center" Text="бригада:"/>
-                    <ComboBox Name ="CbWorkers" Margin="3" Width="200" VerticalAlignment="Center" ItemsSource="{Binding FilterWorkerList}" IsEditable="True"
-                      IsReadOnly="True" SelectionChanged="OnCbSelectionChanged" DropDownClosed="CbWorkers_OnDropDownClosed">
-                        <ComboBox.ItemTemplate>
-                            <DataTemplate>
-                                <StackPanel Orientation="Horizontal" Margin="2">
-                                    <CheckBox IsChecked="{Binding Selected}" Checked="OnCbObjectCheckBoxChecked" Unchecked="OnCbObjectCheckBoxChecked"
-                                      Width="20" />
-                                    <TextBlock Text="{Binding FullName}"/>
-                                </StackPanel>
-                            </DataTemplate>
-                        </ComboBox.ItemTemplate>
-                    </ComboBox>
-                    <DockPanel>
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="УК:"/>
-                        <ComboBox Margin="3" Width="120" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedServiceCompany}" ItemsSource="{Binding ServiceCompanyList}" IsEditable="True" />
-                    </DockPanel>
-                    <DockPanel>
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="Диспетчер:"/>
-                        <ComboBox Margin="3" Width="120" VerticalAlignment="Center" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedUser}" ItemsSource="{Binding UserList}" IsEditable="True" />
-                    </DockPanel>
-                    <DockPanel>
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="Платная:"/>
-                        <ComboBox Margin="3" Width="120" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPayment}" ItemsSource="{Binding PaymentList}" IsEditable="True" />
-                    </DockPanel>
-                    <CheckBox Margin="5" VerticalAlignment="Center" Content="Для обсуждения!" Foreground="Red" IsChecked="{Binding ServiceCompanyBadWork}"/>
-                </WrapPanel>
-            </Expander>
-
-            <WrapPanel>
-            <StackPanel>
-                    <DockPanel>
-                        <RadioButton Margin="3" GroupName="DateFind" IsChecked ="{Binding FilterByCreateDate}" VerticalAlignment="Center" Content="По дате заявки"  Width="140"/>
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="с:"/>
-                        <DatePicker  Margin="3" Width="110" SelectedDate="{Binding FromDate}"/>
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="по:"/>
-                        <DatePicker  Margin="3" Width="110" SelectedDate="{Binding ToDate}"/>
-                    </DockPanel>
-                    <DockPanel>
-                        <RadioButton Margin="3" GroupName="DateFind"  VerticalAlignment="Center" Content="По дате исполнения" Width="140"/>
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="с:"/>
-                        <DatePicker  Margin="3" Width="110" SelectedDate="{Binding ExecuteFromDate}"/>
-                        <TextBlock Margin="3" VerticalAlignment="Center" Text="по:"/>
-                        <DatePicker  Margin="3" Width="110" SelectedDate="{Binding ExecuteToDate}"/>
-                    </DockPanel>
-                </StackPanel>
+        <WrapPanel Grid.Row="0" HorizontalAlignment="Right">
                 <Button Width="80" Margin="5" Content="Обновить" Command="{Binding RefreshRequestCommand}"/>
-                <Button Width="80" Margin="5" Content="Экспорт" Command="{Binding ExportRequestCommand}"/>
-                <Button Width="120" Margin="5" Content="Сброс фильтров" Command="{Binding ClearFiltersCommand}"/>
-                <TextBlock Margin="35,3,3,3" VerticalAlignment="Center" Text="Заявок:"/>
-                <TextBlock Margin="3,3,3,3" FontWeight="Bold" VerticalAlignment="Center" Text="{Binding RequestCount}"/>
-            </WrapPanel>
         </WrapPanel>
         <DataGrid Name="RequestsGrid" Grid.Row ="1" 
                           AutoGenerateColumns="False"
