--- a/CRMPhone/Dialogs/RequestDialog.xaml
+++ b/CRMPhone/Dialogs/RequestDialog.xaml
@@ -27,25 +27,27 @@
         </Grid.RowDefinitions>
         <StackPanel Grid.Row="0">
             <WrapPanel>
-        <WrapPanel Margin="5" IsEnabled ="{Binding CanEdit}" >
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="город:"/>
-            <ComboBox Margin="3" Width="100" TabIndex ="1" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCity}" ItemsSource="{Binding CityList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="улица:"/>
-            <ComboBox Margin="3" Width ="150" TabIndex ="2" DisplayMemberPath="NameWithPrefix" SelectedItem="{Binding SelectedStreet}" ItemsSource="{Binding StreetList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="дом:"/>
-            <ComboBox Margin="3" Width="65" TabIndex ="3" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedHouse}" ItemsSource="{Binding HouseList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
-            <Button Margin="3" Width="32" TabIndex ="3" Visibility="{Binding AlertExists, Converter={StaticResource BooleanToVisibility}}" 
+                <WrapPanel Margin="5"  >
+                    <WrapPanel IsEnabled ="{Binding CanEdit}">
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="город:"/>
+                        <ComboBox Margin="3" Width="100" TabIndex ="1" DisplayMemberPath="Name" SelectedItem="{Binding SelectedCity}" ItemsSource="{Binding CityList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="улица:"/>
+                        <ComboBox Margin="3" Width ="150" TabIndex ="2" DisplayMemberPath="NameWithPrefix" SelectedItem="{Binding SelectedStreet}" ItemsSource="{Binding StreetList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="дом:"/>
+                        <ComboBox Margin="3" Width="65" TabIndex ="3" DisplayMemberPath="FullName" SelectedItem="{Binding SelectedHouse}" ItemsSource="{Binding HouseList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
+                        <Button Margin="3" Width="32" TabIndex ="3" Visibility="{Binding AlertExists, Converter={StaticResource BooleanToVisibility}}" 
                     Command="{Binding OpenAlertsCommand}" ToolTip="Есть активные работы по выбранному дому!">
-               <Image Source="pack://application:,,,/Images/danger_small.png" Width="24"/>
-            </Button>
-                   <!--<ComboBox Margin="3" Width="100" TabIndex ="4" DisplayMemberPath="Name" SelectedItem="{Binding SelectedAddressType}" ItemsSource="{Binding AddressTypeList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>-->
-            <ComboBox Margin="3" Width="100" TabIndex ="5" DisplayMemberPath="Name" SelectedItem="{Binding SelectedFlat}" ItemsSource="{Binding FlatList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="подъезд:"/>
-            <TextBox Margin="3" Width="45" TabIndex ="6" Text="{Binding Path=Entrance}"/>
-            <TextBlock Margin="3" VerticalAlignment="Center" Text="этаж:"/>
-            <TextBox Margin="3" Width="45" TabIndex ="7" Text="{Binding Path=Floor}" />
-            <Button Content="Закрыть" Margin="25,3,15,3" Width="120" Command="{Binding CloseCommand}"/>
-            </WrapPanel>
+                            <Image Source="pack://application:,,,/Images/danger_small.png" Width="24"/>
+                        </Button>
+                        <!--<ComboBox Margin="3" Width="100" TabIndex ="4" DisplayMemberPath="Name" SelectedItem="{Binding SelectedAddressType}" ItemsSource="{Binding AddressTypeList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>-->
+                        <ComboBox Margin="3" Width="100" TabIndex ="5" DisplayMemberPath="Name" SelectedItem="{Binding SelectedFlat}" ItemsSource="{Binding FlatList}" IsEditable="True" PreviewKeyDown="tabItem_PreviewKeyDown"/>
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="подъезд:"/>
+                        <TextBox Margin="3" Width="45" TabIndex ="6" Text="{Binding Path=Entrance}"/>
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="этаж:"/>
+                        <TextBox Margin="3" Width="45" TabIndex ="7" Text="{Binding Path=Floor}" />
+                    </WrapPanel>
+                    <Button Content="Закрыть" Margin="25,3,15,3" Width="120" Command="{Binding CloseCommand}"/>
+                </WrapPanel>
             </WrapPanel>
             <StackPanel>
             <!--<StackPanel Visibility ="{Binding CanEdit, Converter={StaticResource BooleanToVisibility}}">-->
