[~] - Возможность менять адрес заявки админу

--- a/CRMPhone/Controls/AlertRequestControl.xaml
+++ b/CRMPhone/Controls/AlertRequestControl.xaml
@@ -110,6 +110,16 @@
                         </Style>
                     </DataGridTextColumn.ElementStyle>
                 </DataGridTextColumn>
+                <DataGridTextColumn Header="ФИО" Width="110"
+                             Binding="{Binding Path=MainFio}">
+                    <DataGridTextColumn.ElementStyle>
+                        <Style TargetType="{x:Type TextBlock}">
+                            <Setter Property="TextWrapping" Value="Wrap"/>
+                            <Setter Property="Margin" Value="3"/>
+
+                        </Style>
+                    </DataGridTextColumn.ElementStyle>
+                </DataGridTextColumn>
                 <DataGridTextColumn Header="Услуга" Width="100"
                              Binding="{Binding Path=ParentService}">
                     <DataGridTextColumn.ElementStyle>
