--- a/CRMPhone/Dialogs/RequestDialog.xaml
+++ b/CRMPhone/Dialogs/RequestDialog.xaml
@@ -46,6 +46,10 @@
                         <TextBlock Margin="3" VerticalAlignment="Center" Text="этаж:"/>
                         <TextBox Margin="3" Width="45" TabIndex ="7" Text="{Binding Path=Floor}" />
                     </WrapPanel>
+                    <Button Margin="3" Width="32" TabIndex ="3" Visibility="{Binding CanEditAddress, Converter={StaticResource BooleanToVisibility}}" 
+                    Command="{Binding EditAddressCommand}" ToolTip="Изменить адрес заявки!">
+                        <Image Source="pack://application:,,,/Images/edit_small.png" Width="24"/>
+                    </Button>
                     <Button Content="Закрыть" Margin="25,3,15,3" Width="120" Command="{Binding CloseCommand}"/>
                 </WrapPanel>
             </WrapPanel>
