--- a/CRMPhone/Controls/RequestItem.xaml
+++ b/CRMPhone/Controls/RequestItem.xaml
@@ -32,6 +32,7 @@
                     <TextBlock Margin = "3" VerticalAlignment="Center" Text="Статус:"/>
                     <TextBlock Margin = "3" VerticalAlignment="Center" Text="{Binding RequestState}"/>
                     <CheckBox Margin="3" VerticalAlignment="Center" FontWeight="Bold" Foreground ="Red" IsChecked="{Binding IsBadWork}">Для обсуждения!</CheckBox>
+                    <CheckBox Margin="3" VerticalAlignment="Center" FontWeight="Bold" Foreground ="Red" IsChecked="{Binding Gatanty}">Гарантийная</CheckBox>
                 </WrapPanel>
                     <WrapPanel Grid.Row="1" Grid.Column="0">
                     <!--<WrapPanel IsEnabled="{Binding CanSave}" Grid.Row="1" Grid.Column="0">-->
