--- a/CRMPhone/Controls/RequestControl.xaml
+++ b/CRMPhone/Controls/RequestControl.xaml
@@ -66,7 +66,12 @@
                         <TextBlock Margin="3" VerticalAlignment="Center" Text="Платная:"/>
                         <ComboBox Margin="3" Width="120" VerticalAlignment="Center" DisplayMemberPath="Name" SelectedItem="{Binding SelectedPayment}" ItemsSource="{Binding PaymentList}" IsEditable="True" />
                     </DockPanel>
+                    <DockPanel>
+                        <TextBlock Margin="3" VerticalAlignment="Center" Text="Телефон:"/>
+                        <TextBox Margin="3" Width="120" VerticalAlignment="Center" Text="{Binding ClientPhone}"/>
+                    </DockPanel>
                     <CheckBox Margin="5" VerticalAlignment="Center" Content="Для обсуждения!" Foreground="Red" IsChecked="{Binding ServiceCompanyBadWork}"/>
+                    <CheckBox Margin="5" VerticalAlignment="Center" Content="Повторная" Foreground="Red" IsChecked="{Binding OnlyRetry}"/>
                 </WrapPanel>
             </Expander>
 
@@ -123,6 +128,24 @@
                     <DataGridTemplateColumn.CellTemplate>
                         <DataTemplate DataType="dto:RequestForListDto">
                             <Image Source="pack://application:,,,/Images/attach.png" Height="24" Visibility="{Binding HasAttachment, Converter={StaticResource BooleanToVisibility} }"/>
+                        </DataTemplate>
+                    </DataGridTemplateColumn.CellTemplate>
+                </DataGridTemplateColumn>
+                <DataGridTemplateColumn Width="30" >
+                    <DataGridTemplateColumn.HeaderStyle>
+                        <Style TargetType="DataGridColumnHeader">
+                            <Setter Property="ContentTemplate">
+                                <Setter.Value>
+                                    <DataTemplate>
+                                        <Image Source="pack://application:,,,/Images/retry.png" Height="16" HorizontalAlignment="Center"/>
+                                    </DataTemplate>
+                                </Setter.Value>
+                            </Setter>
+                        </Style>
+                    </DataGridTemplateColumn.HeaderStyle>
+                    <DataGridTemplateColumn.CellTemplate>
+                        <DataTemplate DataType="dto:RequestForListDto">
+                            <Image Source="pack://application:,,,/Images/retry.png" Height="16" Visibility="{Binding IsRetry, Converter={StaticResource BooleanToVisibility} }"/>
                         </DataTemplate>
                     </DataGridTemplateColumn.CellTemplate>
                 </DataGridTemplateColumn>
